[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
env_logger = "0.9.1"
actix-web = "4"
actix-cors = "0.6"
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
mongodb = "2.3.1"
bson = { version = "2.0.0-beta.1", features = ["chrono-0_4"] }
iso8601-timestamp = { version = "0.1.8", features = ["schema", "bson"] }
actix-multipart = "0.4.0"
chrono = "0.4.23"
rust-s3 = "0.32"
futures-util = "0.3.25"
tree_magic = "0.2.3"
imagesize = "0.10.1"

[dependencies.magic-crypt]
version = "*"
default-features = false

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]